[project]
name = "variableoptimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gspread>=6.2.1",
    "matplotlib>=3.10.7",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
